--- a/altins1.html
+++ b/altins1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Altın Fiyat Hesaplama</title>
+    <title>ALTINS1 Fiyat Hesaplama</title>
     <style>
         body {
             font-family: Arial, sans-serif;
